--- a/templates/default/basic_vhost.erb
+++ b/templates/default/basic_vhost.erb
@@ -40,7 +40,7 @@ PassengerRuby <%=node[:app_passenger][:ruby_bin]%>
 RailsSpawnMethod  <%=node[:app_passenger][:rails_spawn_method]%>
 RailsEnv <%= @params[:rails_env] %>
 
-PassengerAppRoot <%="#{node[:app_passenger][:deploy_dir].chomp}/current"%>
+PassengerAppRoot <%="#{node[:app_passenger][:deploy_dir].chomp"%>
 
 
 # Enable status page for monitoring purposes
