--- a/templates/default/database.yml.erb
+++ b/templates/default/database.yml.erb
@@ -1,5 +1,5 @@
 #
-# DB Config file, version 1.
+# DB Config file, version 1.2
 #
 # Managed by RightScale
 # DO NOT EDIT BY HAND
@@ -12,24 +12,27 @@
   database: <%= node[:app_passenger][:project][:db][:schema_name] %>
   username: <%= node[:db][:application][:user] %>
   password: <%= node[:db][:application][:password] %>
-  host: <%= node[:db][:fqdn] %>
+  host: <%= node[:db][:dns][:master][:fqdn] %>
   encoding: utf8
   #socket: /var/lib/mysql/mysql.sock
 <%  when "sqlite3","sqlite"%>
 # SQLite version 3.x
 <%= node[:app_passenger][:project][:environment] %>:
+  host: <%= node[:db][:dns][:master][:fqdn] %>
   adapter: <%= node[:app_passenger][:project][:db][:adapter] %>
   database: <%= node[:app_passenger][:project][:db][:schema_name] %>
   pool: 5
   timeout: 5000
 <%  when "postgresql"%>
 <%= node[:app_passenger][:project][:environment] %>:
+  host: <%= node[:db][:dns][:master][:fqdn] %>
   adapter: <%= node[:app_passenger][:project][:db][:adapter] %>
   database: <%= node[:app_passenger][:project][:db][:schema_name] %>
   username: <%= node[:db][:application][:user] %>
   password: <%= node[:db][:application][:password] %>
 <%  else%>
 <%= node[:app_passenger][:project][:environment] %>:
+  host: <%= node[:db][:dns][:master][:fqdn] %>
   adapter: <%= node[:app_passenger][:project][:db][:adapter] %>
   database: <%= node[:app_passenger][:project][:db][:schema_name] %>
 
