passenger: template fix

--- a/templates/default/ports.conf.erb
+++ b/templates/default/ports.conf.erb
@@ -6,8 +6,8 @@
 # DO NOT EDIT BY HAND
 #
 
-Listen <%=@params[:vhost_port]%>
-NameVirtualHost *:<%=@params[:vhost_port]%>
+Listen <%=@vhost_port%>
+NameVirtualHost *:<%=@vhost_port%>
 
 #Listen 80
 #NameVirtualHost *:80
