--- a/templates/default/database.yml.erb
+++ b/templates/default/database.yml.erb
@@ -5,35 +5,35 @@
 # DO NOT EDIT BY HAND
 #
 
-<%  case @params[:adapter]
+<%  case @adapter
     when "mysql" %>
-<%= @params[:environment] %>:
-  adapter: <%= @params[:adapter] %>
-  database: <%= @params[:database] %>
-  username: <%= @params[:db_user] %>
-  password: <%= @params[:db_password] %>
-  host: <%= @params[:db_sever] %>
+<%= @environment %>:
+  adapter: <%= @adapter %>
+  database: <%= @database %>
+  username: <%= @db_user %>
+  password: <%= @db_password %>
+  host: <%= @db_sever %>
   encoding: utf8
   #socket: /var/lib/mysql/mysql.sock
 <%  when "sqlite3","sqlite"%>
 # SQLite version 3.x
-<%= @params[:environment] %>:
-  host: <%= @params[:db_sever] %>
-  adapter: <%= @params[:adapter] %>
-  database: <%= @params[:database] %>
+<%= @environment %>:
+  host: <%= @db_sever %>
+  adapter: <%= @adapter %>
+  database: <%= @database %>
   pool: 5
   timeout: 5000
 <%  when "postgresql"%>
-<%= @params[:environment] %>:
-  host: <%= @params[:db_sever] %>
-  adapter: <%= @params[:adapter] %>
-  database: <%= @params[:database] %>
-  username: <%= @params[:db_user] %>
-  password: <%= @params[:db_password] %>
+<%= @environment %>:
+  host: <%= @db_sever %>
+  adapter: <%= @adapter %>
+  database: <%= @database %>
+  username: <%= @db_user %>
+  password: <%= @db_password %>
 <%  else%>
-<%= @params[:environment] %>:
-  host: <%= @params[:db_sever] %>
-  adapter: <%= @params[:adapter] %>
-  database: <%= @params[:database] %>
+<%= @environment %>:
+  host: <%= @db_sever %>
+  adapter: <%= @adapter %>
+  database: <%= @database %>
 
 <%end%>
